--- a/index.html
+++ b/index.html
@@ -5,82 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style-reflow.css" />
-    <title>F1 Fantasy App</title>
+    <title>F1 Fantasy League 2023</title>
   </head>
   <body>
-    <h1 class="header">F1 Fantasy 2022</h1>
-    <!--div class="driver-card">
-      <div class="driver-info">
-        <div class="max"><img src="./gif/maxv.gif" alt="max" /></div>
+    <main>
+      <h1>2023 F1 Fantasy League</h1>
+      <h2>Current 2023 stats</h2>
+            <div class="scott">
+        <div class="team-info">Scott</div>
+        <div class="season-total">-</div>
       </div>
-      <div class="driver-info">
-        <div class="checko"><img src="./gif/checko.gif" alt="Checko" /></div>
+      <div class="katie">
+        <div class="team-info">Katie</div>
+        <div class="season-total">-</div>
       </div>
-      <div class="driver-info">
-        <div class="carlos"><img src="./gif/carlos.gif" alt="Carlos" /></div>
+      <div class="tara">
+        <div class="team-info">Tara</div>
+        <div class="season-total">-</div>
       </div>
-      <div class="driver-info">
-        <div class="charles"><img src="./gif/charles.gif" alt="Charles" /></div>
+      <div class="pete">
+        <div class="team-info">Pete</div>
+        <div class="season-total">-</div>
       </div>
-      <div class="driver-info">
-        <div class="lewis"><img src="./gif/lewis-h.gif" alt="Lewis" /></div>
+      <div class="graeme">
+        <div class="team-info">Graeme</div>
+        <div class="season-total">-</div>
       </div>
-      <div class="driver-info">
-        <div class="george"><img src="./gif/george.gif" alt="George" /></div>
+      <div class="jason">
+        <div class="team-info">Jason</div>
+        <div class="season-total">-</div>
       </div>
-      <div class="driver-info">
-        <div class="lando"><img src="./gif/lando-face.gif" alt="Lando" /></div>
-      </div>
-      <div class="driver-info">
-        <div class="daniel"><img src="./gif/daniel-r.gif" alt="Daniel" /></div>
-      </div>
-    </div-->
-    <div class="card">
-      <div class="season-info-catagory">
-        <div class="season-catagory">Constructor</div>
-        <div class="season-catagories">
-          -----------Weekly Drivers-----------
-        </div>
-        <div class="season-catagories">Weekly Score</div>
-        <div class="season-catagories">Season Total</div>
-      </div>
-      <div class="season-info-scott">
-        <div class="team-info">Scott - "I Monza Toilet"</div>
-        <div class="weekly-drivers">Sai / Alo</div>
-        <div class="weekly-total">12</div>
+    <h2 class="header">F1 Fantasy League 2022 Results</h1>
+      <div class="scott">
+        <div class="team-info">Scott</div>
         <div class="season-total">362</div>
       </div>
-      <div class="season-info-katie">
-        <div class="team-info">Katie - "Lando N Me"</div>
-        <div class="weekly-drivers">Ver / Bot</div>
-        <div class="weekly-total">25</div>
+      <div class="katie">
+        <div class="team-info">Katie</div>
         <div class="season-total">335</div>
       </div>
-      <div class="season-info-tara">
-        <div class="team-info">Tara - "No Verstapen me"</div>
-        <div class="weekly-drivers">Ham / Nor</div>
-        <div class="weekly-total">09</div>
+      <div class="tara">
+        <div class="team-info">Tara</div>
         <div class="season-total">329</div>
       </div>
-      <div class="season-info-pete">
-        <div class="team-info">Pete - "Gunther get there ..."</div>
-        <div class="weekly-drivers">Rus / Lat</div>
-        <div class="weekly-total">10</div>
+      <div class="pete">
+        <div class="team-info">Pete</div>
         <div class="season-total">312</div>
       </div>
-      <div class="season-info-graeme">
-        <div class="team-info">Graeme - "Legendary Skid Marks"</div>
-        <div class="weekly-drivers">LeC / Oco</div>
-        <div class="weekly-total">24</div>
+      <div class="graeme">
+        <div class="team-info">Graeme</div>
         <div class="season-total">284</div>
       </div>
-      <div class="season-info-jason">
-        <div class="team-info">Jason - "Silver Stoned"</div>
-        <div class="weekly-drivers">Per / Ric</div>
-        <div class="weekly-total">17</div>
+      <div class="jason">
+        <div class="team-info">Jason</div>
         <div class="season-total">262</div>
       </div>
-    </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
