--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h2>Current 2023 stats</h2>
             <div class="scott">
         <div class="team-info">Scott</div>
-        <div class="season-total">-</div>
+        <div id="scott1" class="season-total">-</div>
       </div>
       <div class="katie">
         <div class="team-info">Katie</div>
