--- a/index.html
+++ b/index.html
@@ -11,30 +11,57 @@
     <main>
       <h1>2023 F1 Fantasy League</h1>
       <h2>Current 2023 stats</h2>
-            <div class="scott">
-        <div class="team-info">Scott</div>
-        <div id="scott1" class="season-total">-</div>
-      </div>
-      <div class="katie">
-        <div class="team-info">Katie</div>
-        <div class="season-total">-</div>
-      </div>
-      <div class="tara">
-        <div class="team-info">Tara</div>
-        <div class="season-total">-</div>
-      </div>
-      <div class="pete">
-        <div class="team-info">Pete</div>
-        <div class="season-total">-</div>
-      </div>
-      <div class="graeme">
-        <div class="team-info">Graeme</div>
-        <div class="season-total">-</div>
-      </div>
-      <div class="jason">
-        <div class="team-info">Jason</div>
-        <div class="season-total">-</div>
-      </div>
+            <table>
+  <tr>
+    <th>Team Name</th>
+    <th>Fantasy Principal</th>
+    <th>Lead Driver</th>
+    <th>Secondary Driver</th>
+    <th>Total</th>
+  </tr>
+  <tr>
+    <td>-</td>
+    <td>Scott</td>
+    <td>-</td>
+    <td>-</td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>-</td>
+    <td>Katie</td>
+    <td>-</td>
+    <td>-</td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>-</td>
+    <td>Peter</td>
+    <td>-</td>
+    <td>-</td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>-</td>
+    <td>Graeme</td>
+    <td>-</td>
+    <td>-</td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>-</td>
+    <td>Tara</td>
+    <td>-</td>
+    <td>-</td>
+    <td>-</td>
+  </tr>
+  <tr>
+    <td>-</td>
+    <td>Jason</td>
+    <td>-</td>
+    <td>-</td>
+    <td>-</td>
+  </tr>
+</table>
     <h2 class="header">F1 Fantasy League 2022 Results</h1>
       <div class="scott">
         <div class="team-info">Scott</div>
