--- a/index.html
+++ b/index.html
@@ -63,30 +63,32 @@
   </tr>
 </table>
     <h2 class="header">F1 Fantasy League 2022 Results</h1>
-      <div class="scott">
-        <div class="team-info">Scott</div>
-        <div class="season-total">362</div>
-      </div>
-      <div class="katie">
-        <div class="team-info">Katie</div>
-        <div class="season-total">335</div>
-      </div>
-      <div class="tara">
-        <div class="team-info">Tara</div>
-        <div class="season-total">329</div>
-      </div>
-      <div class="pete">
-        <div class="team-info">Pete</div>
-        <div class="season-total">312</div>
-      </div>
-      <div class="graeme">
-        <div class="team-info">Graeme</div>
-        <div class="season-total">284</div>
-      </div>
-      <div class="jason">
-        <div class="team-info">Jason</div>
-        <div class="season-total">262</div>
-      </div>
+      <table>
+      <tr class="scott">
+        <td class="team-info">Scott</div>
+        <td class="season-total">362</div>
+      </tr>
+      <tr class="katie">
+        <td class="team-info">Katie</div>
+        <td class="season-total">335</div>
+      </tr>
+      <tr class="tara">
+        <td class="team-info">Tara</div>
+        <td class="season-total">329</div>
+      </tr>
+      <tr class="pete">
+        <td class="team-info">Pete</div>
+        <td class="season-total">312</div>
+      </tr>
+      <tr class="graeme">
+        <td class="team-info">Graeme</div>
+        <td class="season-total">284</div>
+      </tr>
+      <tr class="jason">
+        <td class="team-info">Jason</div>
+        <td class="season-total">262</div>
+      </tr>
+      </table>
     </main>
     <script src="script.js"></script>
   </body>
