--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <h2>Current 2023 stats</h2>
             <table>
   <tr>
-    <th>Team Name</th>
-    <th>Fantasy Principal</th>
-    <th>Lead Driver</th>
-    <th>Secondary Driver</th>
-    <th>Total</th>
+    <th rowspan="2">Team Name</th>
+    <th rowspan="2">Fantasy Principal</th>
+    <th>Primary</th>
+    <th>Secondary</th>
+    <th rowspan="2">Total</th>
   </tr>
   <tr>
     <td>-</td>
