--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <h1>2023 F1 Fantasy League</h1>
+      <h1><img src="gif/f1Logo.PNG"/>2023 F1 Fantasy League</h1>
       <h2>Current 2023 stats</h2>
             <table>
   <tr>
