--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <img src="gif/f1Logo.PNG"/ alt="f one logo">
+      <img class="logo" src="gif/f1Logo.PNG"/ alt="f one logo">
       <h1>2023 F1 Fantasy League</h1>
       <h2>Current 2023 stats</h2>
             <table>
