--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
     <th>Total</th>
   </tr>
   <tr>
-    <td>-</td>
+    <td>Let Checo Pass</td>
     <td>Scott</td>
     <td>-</td>
     <td>-</td>
     <td>-</td>
   </tr>
   <tr>
-    <td>-</td>
+    <td>C'Mando with Lando</td>
     <td>Katie</td>
     <td>-</td>
     <td>-</td>
     <td>-</td>
   </tr>
   <tr>
-    <td>-</td>
+    <td>F.E.A Racing</td>
     <td>Peter</td>
     <td>-</td>
     <td>-</td>
@@ -49,14 +49,14 @@
     <td>-</td>
   </tr>
   <tr>
-    <td>-</td>
+    <td>RB Sex Drink</td>
     <td>Tara</td>
     <td>-</td>
     <td>-</td>
     <td>-</td>
   </tr>
   <tr>
-    <td>-</td>
+    <td>For Danny Ric</td>
     <td>Jason</td>
     <td>-</td>
     <td>-</td>
