--- a/index.html
+++ b/index.html
@@ -11,84 +11,76 @@
     <main>
       <img class="logo" src="gif/f1Logo.PNG"/ alt="f one logo">
       <h1>2023 F1 Fantasy League</h1>
-      <h2>Current 2023 stats</h2>
-            <table>
-  <tr>
-    <th>Team Name</th>
-    <th>Fantasy Principal</th>
-    <th>Primary</th>
-    <th>Secondary</th>
-    <th>Total</th>
-  </tr>
-  <tr>
-    <td>Let Checo Pass</td>
-    <td>Scott</td>
-    <td>-</td>
-    <td>-</td>
-    <td>-</td>
-  </tr>
-  <tr>
-    <td>C'Mando with Lando</td>
-    <td>Katie</td>
-    <td>-</td>
-    <td>-</td>
-    <td>-</td>
-  </tr>
-  <tr>
-    <td>F.E.A Racing</td>
-    <td>Peter</td>
-    <td>-</td>
-    <td>-</td>
-    <td>-</td>
-  </tr>
-  <tr>
-    <td>Corse Di Merde RedBull</td>
-    <td>Graeme</td>
-    <td>-</td>
-    <td>-</td>
-    <td>-</td>
-  </tr>
-  <tr>
-    <td>RB Sex Drink</td>
-    <td>Tara</td>
-    <td>-</td>
-    <td>-</td>
-    <td>-</td>
-  </tr>
-  <tr>
-    <td>For Danny Ric</td>
-    <td>Jason</td>
-    <td>-</td>
-    <td>-</td>
-    <td>-</td>
-  </tr>
-</table>
-    <h2 class="header">F1 Fantasy League 2022 Results</h1>
+      <h2>Current 2023 standings</h2>
+      <table>
+        <tr>
+          <th>Team Name</th>
+          <th>Fantasy Principal</th>
+          <th>Primary</th>
+          <th>Secondary</th>
+          <th>Total</th>
+        </tr>
+        <tr>
+          <td>Let Checo Pass</td>
+          <td>Scott</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>C'Mando with Lando</td>
+          <td>Katie</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>F.E.A Racing</td>
+          <td>Peter</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>Corse Di Merde RedBull</td>
+          <td>Graeme</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>RB Sex Drink</td>
+          <td>Tara</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>For Danny Ric</td>
+          <td>Jason</td>
+          <td>-</td>
+          <td>-</td>
+          <td>-</td>
+        </tr>
+      </table>
+      <h2 class="header">F1 Fantasy League 2022 Results</h1>
       <table>
       <tr class="scott">
-        <td class="team-info">Scott</div>
-        <td class="season-total">362</div>
+        <td class="team-info">Scott</td>
+        <td class="team-info">Katie</td>
+        <td class="team-info">Tara</td>
+        <td class="team-info">Pete</td>
+        <td class="team-info">Graeme</td>
+        <td class="team-info">Jason</td>
       </tr>
       <tr class="katie">
-        <td class="team-info">Katie</div>
-        <td class="season-total">335</div>
-      </tr>
-      <tr class="tara">
-        <td class="team-info">Tara</div>
-        <td class="season-total">329</div>
-      </tr>
-      <tr class="pete">
-        <td class="team-info">Pete</div>
-        <td class="season-total">312</div>
-      </tr>
-      <tr class="graeme">
-        <td class="team-info">Graeme</div>
-        <td class="season-total">284</div>
-      </tr>
-      <tr class="jason">
-        <td class="team-info">Jason</div>
-        <td class="season-total">262</div>
-      </tr>
+        <td class="season-total">362</td>
+        <td class="season-total">335</td>
+        <td class="season-total">329</td>
+        <td class="season-total">312</td>
+        <td class="season-total">284</td>
+        <td class="season-total">262</td>
+        </tr>
       </table>
     </main>
     <script src="script.js"></script>
