--- a/index.html
+++ b/index.html
@@ -63,26 +63,34 @@
           <td>-</td>
         </tr>
       </table>
-      <h2 class="header">F1 Fantasy League 2022 Results</h1>
+      <h2>2022 Results</h1>
       <table>
-      <tr class="scott">
-        <td class="team-info">Scott</td>
-        <td class="team-info">Katie</td>
-        <td class="team-info">Tara</td>
-        <td class="team-info">Pete</td>
-        <td class="team-info">Graeme</td>
-        <td class="team-info">Jason</td>
+      <tr>
+        <td>Scott</td>
+        <td>Katie</td>
+        <td>Tara</td>
+        <td>Pete</td>
+        <td>Graeme</td>
+        <td>Jason</td>
       </tr>
-      <tr class="katie">
-        <td class="season-total">362</td>
-        <td class="season-total">335</td>
-        <td class="season-total">329</td>
-        <td class="season-total">312</td>
-        <td class="season-total">284</td>
-        <td class="season-total">262</td>
+      <tr>
+        <td>362</td>
+        <td>335</td>
+        <td>329</td>
+        <td>312</td>
+        <td>284</td>
+        <td>262</td>
         </tr>
       </table>
     </main>
+    <aside>
+      <h3>Common Links</h3>
+      <a href="https://www.formula1.com/en/racing/2023.html" target="_blank">2030 Schedule</a>
+      <a href="https://www.formula1.com/en/results.html/2023/drivers.html" target="_blank">Driver Standings</a>
+      <a href="https://www.formula1.com/en/results.html/2023/team.html" target="_blank">Team Standings</a>
+      <a href="https://www.formula1.com/en/results.html/2023/races.html" target="_blank">Race Results</a>
+      <a href="#" target="_blank"></a>
+    </aside>
     <script src="script.js"></script>
   </body>
 </html>
