--- a/index.html
+++ b/index.html
@@ -85,11 +85,13 @@
     </main>
     <aside>
       <h3>Common Links</h3>
-      <a href="https://www.formula1.com/en/racing/2023.html" target="_blank">2030 Schedule</a>
-      <a href="https://www.formula1.com/en/results.html/2023/drivers.html" target="_blank">Driver Standings</a>
-      <a href="https://www.formula1.com/en/results.html/2023/team.html" target="_blank">Team Standings</a>
-      <a href="https://www.formula1.com/en/results.html/2023/races.html" target="_blank">Race Results</a>
-      <a href="#" target="_blank"></a>
+      <ul class="linkList">
+        <li><a href="https://www.formula1.com/en/racing/2023.html" target="_blank">2030 Schedule</a>
+     <li><a href="https://www.formula1.com/en/results.html/2023/drivers.html" target="_blank">Driver Standings</a>
+    <li><a href="https://www.formula1.com/en/results.html/2023/team.html" target="_blank">Team Standings</a>
+    <li><a href="https://www.formula1.com/en/results.html/2023/races.html" target="_blank">Race Results</a>
+     <li><a href="#" target="_blank"></a>
+      </ul>
     </aside>
     <script src="script.js"></script>
   </body>
