--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>F1 Fantasy League 2023</title>
   </head>
   <body>
+    <div class="container">
     <main>
       <img class="logo" src="gif/f1Logo.PNG"/ alt="f one logo">
       <h1>2023 F1 Fantasy League</h1>
@@ -93,6 +94,7 @@
      <li><a href="#" target="_blank"></a>
       </ul>
     </aside>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
