--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>F1 Fantasy League 2023</title>
   </head>
   <body>
-    <div>
+    <header>
       <img class="logo" src="gif/f1Logo.PNG"/ alt="f one logo">
       <h1>2023 F1 Fantasy League</h1>
-    </div>
+    </header>
     <div class="container">
     <main>
       <h2>Current 2023 standings</h2>
