--- a/index.html
+++ b/index.html
@@ -90,11 +90,10 @@
     <aside>
       <h3>Common Links</h3>
       <ul class="linkList">
-        <li><a href="https://www.formula1.com/en/racing/2023.html" target="_blank">2030 Schedule</a>
-     <li><a href="https://www.formula1.com/en/results.html/2023/drivers.html" target="_blank">Driver Standings</a>
-    <li><a href="https://www.formula1.com/en/results.html/2023/team.html" target="_blank">Team Standings</a>
-    <li><a href="https://www.formula1.com/en/results.html/2023/races.html" target="_blank">Race Results</a>
-     <li><a href="#" target="_blank"></a>
+        <li><a href="https://www.formula1.com/en/racing/2023.html" target="_blank">2030 Schedule</a></li>
+        <li><a href="https://www.formula1.com/en/results.html/2023/drivers.html" target="_blank">Driver Standings</a></li>
+        <li><a href="https://www.formula1.com/en/results.html/2023/team.html" target="_blank">Team Standings</a></li>
+        <li><a href="https://www.formula1.com/en/results.html/2023/races.html" target="_blank">Race Results</a></li>
       </ul>
     </aside>
     </div>
