--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </main>
     <aside>
       <h3>Common Links</h3>
-      <ul class="linkList">
+      <ul class="linklist">
         <li><a href="https://www.formula1.com/en/racing/2023.html" target="_blank">2030 Schedule</a></li>
         <li><a href="https://www.formula1.com/en/results.html/2023/drivers.html" target="_blank">Driver Standings</a></li>
         <li><a href="https://www.formula1.com/en/results.html/2023/team.html" target="_blank">Team Standings</a></li>
