--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <td>-</td>
         </tr>
         <tr>
-          <td>Corse Di Merde RedBull</td>
+          <td>Corse Di Merda RedBull</td>
           <td>Graeme</td>
           <td>-</td>
           <td>-</td>
@@ -90,7 +90,7 @@
     <aside>
       <h3>Common Links</h3>
       <ul class="linklist">
-        <li>Season weekly scores</li>
+        <li><a href="https://1drv.ms/x/s!Agtx5K6cEU9llNFi6809GSQqGr3Mdg?e=afWgI1" target="_blank">Season weekly scores</a></li>
         <li><a href="https://www.formula1.com/en/racing/2023.html" target="_blank">2030 Schedule</a></li>
         <li><a href="https://www.formula1.com/en/results.html/2023/drivers.html" target="_blank">Driver Standings</a></li>
         <li><a href="https://www.formula1.com/en/results.html/2023/team.html" target="_blank">Team Standings</a></li>
