--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <td>-</td>
         </tr>
         <tr>
-          <td>RB Sex Drink</td>
+          <td>RB Sex Drink... for Peter</td>
           <td>Tara</td>
           <td>-</td>
           <td>-</td>
