--- a/index.html
+++ b/index.html
@@ -96,6 +96,32 @@
         <li><a href="https://www.formula1.com/en/results.html/2023/team.html" target="_blank">Team Standings</a></li>
         <li><a href="https://www.formula1.com/en/results.html/2023/races.html" target="_blank">Race Results</a></li>
       </ul>
+      <h3>Pre-Qually pick times</h3>
+      <ol>
+        <li>Bahrain - Friday, 7pm</li>
+        <li>Saudi Arabia</li>
+        <li>Australia</li>
+        <li>Azerbaijan</li>
+        <li>US: Miami</li>
+        <li>Italy: Emilia Romagna</li>
+        <li>Monaco</li>
+        <li>Spain</li>
+        <li>Canada</li>
+        <li>Austria</li>
+        <li>Great Britain</li>
+        <li>Hungary</li>
+        <li>Belgium</li>
+        <li>Netherlands</li>
+        <li>Italian GP</li>
+        <li>Singapore</li>
+        <li>Japan</li>
+        <li>Qatar</li>
+        <li>US: Austin</li>
+        <li>Mexico</li>
+        <li>Brazil</li>
+        <li>US: Vegas</li>
+        <li>Abu Dhabi</li>
+      </ul>
     </aside>
     </div>
     </div>
