--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
       <h3>Pre-Qually pick times</h3>
       <ol>
         <li>Bahrain - Friday, 7pm</li>
-        <li>Saudi Arabia</li>
-        <li>Australia</li>
-        <li>Azerbaijan</li>
-        <li>US: Miami</li>
+        <li>Saudi Arabia - Saturday, 9am</li>
+        <li>Australia - Friday, 8pm</li>
+        <li>Azerbaijan - Saturday, 4pm</li>
+        <li>US: Miami - Saturday, 11am</li>
         <li>Italy: Emilia Romagna</li>
         <li>Monaco</li>
         <li>Spain</li>
