--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <table>
         <tr>
           <th>Team Name</th>
-          <th>Fantasy Principal</th>
+          <th>Principal</th>
           <th>Primary</th>
           <th>Secondary</th>
           <th>Total</th>
@@ -53,14 +53,14 @@
           <td>-</td>
         </tr>
         <tr>
-          <td>RB Sex Drink... for Peter</td>
+          <td>RB Sex Drink</td>
           <td>Tara</td>
           <td>-</td>
           <td>-</td>
           <td>-</td>
         </tr>
         <tr>
-          <td>For Danny Ric</td>
+          <td>Big Ric Energy</td>
           <td>Jason</td>
           <td>-</td>
           <td>-</td>
