--- a/index.html
+++ b/index.html
@@ -27,43 +27,43 @@
         <tr>
           <td>Let Checo Pass</td>
           <td>Scott</td>
-          <td>-</td>
-          <td>-</td>
+          <td>Sainz</td>
+          <td>Stroll</td>
           <td>-</td>
         </tr>
         <tr>
           <td>C'Mando with Lando</td>
           <td>Katie</td>
-          <td>-</td>
-          <td>-</td>
+          <td>Hamilton</td>
+          <td>Hulkenburg</td>
           <td>-</td>
         </tr>
         <tr>
           <td>F.E.A Racing</td>
           <td>Peter</td>
-          <td>-</td>
-          <td>-</td>
+          <td>Leclerc</td>
+          <td>Russell</td>
           <td>-</td>
         </tr>
         <tr>
           <td>Corse Di Merda RedBull</td>
           <td>Graeme</td>
-          <td>-</td>
-          <td>-</td>
+          <td>Checo</td>
+          <td>Magnussen</td>
           <td>-</td>
         </tr>
         <tr>
-          <td>RB Sex Drink</td>
+          <td>Max's only fan</td>
           <td>Tara</td>
-          <td>-</td>
-          <td>-</td>
+          <td>Fernando</td>
+          <td>Norris</td>
           <td>-</td>
         </tr>
         <tr>
           <td>Big Ric Energy</td>
           <td>Jason</td>
-          <td>-</td>
-          <td>-</td>
+          <td>Verstappen</td>
+          <td>Bottas</td>
           <td>-</td>
         </tr>
       </table>
