--- a/index.html
+++ b/index.html
@@ -67,6 +67,25 @@
           <td>29</td>
         </tr>
       </table>
+      <h2>Weekly Challenge Points</h1>
+      <table>
+      <tr>
+        <td>Scott</td>
+        <td>Katie</td>
+        <td>Tara</td>
+        <td>Pete</td>
+        <td>Graeme</td>
+        <td>Jason</td>
+      </tr>
+      <tr>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        </tr>
+      </table>
       <h2>2022 Results</h1>
       <table>
       <tr>
