--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
         <td>Jason</td>
       </tr>
       <tr>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
+        <td>-</td><!--Scott-->
+        <td>-</td><!--Katie-->
+        <td>2.5</td><!--Tara-->
+        <td>-</td><!--Pete-->
+        <td>2.5</td><!--Graeme-->
+        <td>-</td><!--Jason-->
         </tr>
       </table>
       <h2>2022 Results</h1>
