--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
           <td>29</td>
         </tr>
       </table>
+     <h2>Weekly Draft Order</h1>
+      <ol>
+        <li>Peter</li>
+        <li>Katie</li>
+        <li>Tara</li>
+        <li>Graeme</li>
+        <li>Scott</li>
+        <li>Jason</li>
+      </ol>
       <h2>Weekly Challenge Points</h1>
       <table>
       <tr>
