--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.4.js"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
+    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
     <link rel="stylesheet" href="style-reflow.css" />
     <title>F1 Fantasy League 2023</title>
   </head>
@@ -16,7 +19,7 @@
     <div class="container">
     <main>
       <h2>Current 2023 standings</h2>
-      <table>
+      <table id="myTable">
         <tr>
           <th>Team Name</th>
           <th>Principal</th>
@@ -153,6 +156,12 @@
     </aside>
     </div>
     </div>
+    <script>
+      $(document).ready( function () {
+    $('#myTable').DataTable();
+} );
+    </script>
+
     <script src="script.js"></script>
   </body>
 </html>
