--- a/index.html
+++ b/index.html
@@ -28,55 +28,46 @@
         <tr>
           <td>Big Ric Energy</td>
           <td>Jason</td>
-          <td>Verstappen</td>
-          <td>Bottas</td>
+          <td>Stroll</td>
+          <td>Norris</td>
           <td>29</td>
         </tr>
         <tr>
           <td>Let Checo Pass</td>
           <td>Scott</td>
           <td>Sainz</td>
-          <td>Stroll</td>
+          <td>Leclerc</td>
           <td>20</td>
         </tr>
         <tr>
           <td>Corse Di Merda RedBull</td>
           <td>Graeme</td>
-          <td>Checo</td>
-          <td>Magnussen</td>
+          <td>Hammy</td>
+          <td>Ocon</td>
           <td>18</td>
         </tr>
         <tr>
           <td>Max's only fan</td>
           <td>Tara</td>
           <td>Fernando</td>
-          <td>Norris</td>
+          <td>Russell</td>
           <td>15</td>
         </tr>
         <tr>
           <td>C'Mando with Lando</td>
           <td>Katie</td>
-          <td>Hamilton</td>
-          <td>Hulkenburg</td>
+          <td>Perez</td>
+          <td>Zhou</td>
           <td>10</td>
         </tr>
         <tr>
           <td>F.E.A Racing</td>
           <td>Peter</td>
-          <td>Leclerc</td>
-          <td>Russell</td>
+          <td>Max</td>
+          <td>Piastri</td>
           <td>6</td>
         </tr>
       </table>
-     <h2>Weekly Draft Order</h1>
-      <ol>
-        <li>Peter</li>
-        <li>Katie</li>
-        <li>Tara</li>
-        <li>Graeme</li>
-        <li>Scott</li>
-        <li>Jason</li>
-      </ol>
       <h2>Weekly Challenge Points</h1>
       <table>
       <tr>
