--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="container">
     <main>
       <h2>Current 2023 standings</h2>
+      <button onclick="sortTable()">Sort by postition</button>
       <table id="myTable">
         <tr>
           <th>Team Name</th>
