--- a/index.html
+++ b/index.html
@@ -28,46 +28,55 @@
         <tr>
           <td>Big Ric Energy</td>
           <td>Jason</td>
-          <td>Stroll</td>
+          <td>Verstappen</td>
           <td>Norris</td>
-          <td>29</td>
+          <td>62</td>
         </tr>
         <tr>
           <td>Let Checo Pass</td>
           <td>Scott</td>
-          <td>Sainz</td>
-          <td>Leclerc</td>
-          <td>34</td>
+          <td>Checo</td>
+          <td>Piastri</td>
+          <td>49</td>
         </tr>
         <tr>
           <td>Corse Di Merda RedBull</td>
           <td>Graeme</td>
-          <td>Hammy</td>
-          <td>Ocon</td>
-          <td>32</td>
+          <td>Alonso</td>
+          <td>Gasly</td>
+          <td>47</td>
         </tr>
         <tr>
           <td>Max's only fan</td>
           <td>Tara</td>
-          <td>Fernando</td>
           <td>Russell</td>
-          <td>42</td>
+          <td>Stroll</td>
+          <td>54</td>
         </tr>
         <tr>
           <td>C'Mando with Lando</td>
           <td>Katie</td>
-          <td>Perez</td>
-          <td>Zhou</td>
-          <td>35</td>
+          <td>Hamilton</td>
+          <td>Sainz</td>
+          <td>53</td>
         </tr>
         <tr>
           <td>F.E.A Racing</td>
           <td>Peter</td>
-          <td>Max</td>
-          <td>Piastri</td>
+          <td>Leclerc</td>
+          <td>Ocon</td>
           <td>25</td>
         </tr>
       </table>
+      Round 4 Pick order:
+      <ul>
+        <li>Peter
+        <li>Tara
+        <li>Graeme
+        <li>Scott
+        <li>Katie
+        <li>Jason
+      </ul>
       <h2>Weekly Challenge Points</h1>
       <table>
       <tr>
