--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <td>25</td>
         </tr>
       </table>
-      Round 4 Pick order:
+      <h2>Round 4 Pick order:</h2>
       <ul>
         <li>Peter
         <li>Tara
@@ -77,7 +77,7 @@
         <li>Katie
         <li>Jason
       </ul>
-      <h2>Weekly Challenge Points</h1>
+      <h2>Weekly Challenge Points</h2>
       <table>
       <tr>
         <td>Scott</td>
@@ -96,7 +96,7 @@
         <td>-</td><!--Jason-->
         </tr>
       </table>
-      <h2>2022 Results</h1>
+      <h2>2022 Results</h2>
       <table>
       <tr>
         <td>Scott</td>
